--- a/default.properties
+++ b/default.properties
@@ -8,28 +8,29 @@
 
 # Project Properties ------------------------------------------
 Name=JGoodies Looks
-name=looks
-spec.version=2.3
-impl.version=2.3.1
-dist.version=2_3_1-20091217
+shortname=looks
+name=jgoodies-looks
+spec.version=2.4
+impl.version=2.4-SNAPSHOT
+version.name=${impl.version}
+dist.version=2_4_0-SNAPSHOT-20100111
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
 impl.vendor=JGoodies Karsten Lentzsch
-copyright.date=2001-2009
+copyright.date=2001-2010
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
 
-jar.all.name    =looks
-jar.plastic.name=plastic
-jar.windows.name=looks-win
+jar.all.name    =jgoodies-looks
+jar.plastic.name=jgoodies-plastic
+jar.windows.name=jgoodies-looks-win
 
 top.dir=${basedir}
 
 # Source Properties -------------------------------------------
 src.dir         = ${top.dir}/src
 src.core.dir    = ${src.dir}/core
-src.demo.dir    = ${src.dir}/demo
 src.test.dir    = ${src.dir}/test
 docs.dir        = ${top.dir}/docs
 
@@ -37,9 +38,8 @@ descriptors.dir = ${top.dir}/conf/service descriptors
 
 
 # Library Properties ------------------------------------------
-lib.dir        = ${top.dir}/lib
-lib.forms.name = forms-1.2.1.jar
-lib.forms.jar  = ${lib.dir}/${lib.forms.name}
+lib.dir         = ${top.dir}/lib
+lib.common.jar  = ${lib.dir}/jgoodies-common-0.9.9.jar
 
 
 # JavaDoc Properties ------------------------------------------
@@ -54,14 +54,13 @@ build.compile.debug=on
 build.compile.deprecation=off
 build.compile.fork=no
 build.compile.nowarn=on
-build.compile.source=1.4
-build.compile.target=1.4
+build.compile.source=1.5
+build.compile.target=1.5
 build.encoding=ISO-8859-1
 
 build.dir          = ${top.dir}/build
 build.classes.dir  = ${build.dir}/classes
 build.core.dir     = ${build.classes.dir}/core
-build.demo.dir     = ${build.classes.dir}/demo
 build.test.dir     = ${build.classes.dir}/test
 build.manifest     = ${build.dir}/manifest.mf
 build.docs.dir     = ${build.dir}/docs
@@ -71,10 +70,6 @@ build.reports.dir  = ${build.dir}/test-reports
 build.all.jar      = ${build.dir}/${jar.all.name}.jar
 build.plastic.jar  = ${build.dir}/${jar.plastic.name}.jar
 build.windows.jar  = ${build.dir}/${jar.windows.name}.jar
-
-build.demo.jar     = ${build.dir}/demo.jar
-build.tiny.jar     = ${build.dir}/tiny.jar
-build.fonttest.jar = ${build.dir}/fonttest.jar
 
 build.maven.dir    = ${build.dir}/maven
 build.maven.pom.template = ${top.dir}/conf/maven-pom-template.xml
@@ -88,7 +83,6 @@ dist.subdir      = ${dist.name}
 dist.dir         = ${dist.root.dir}/${dist.subdir}
 dist.zip         = ${dist.root.dir}/${deploy.name}.zip
 dist.src.dir     = ${dist.dir}/src
-dist.demo.dir    = ${dist.dir}/demo
 dist.docs.dir    = ${dist.dir}/docs
 dist.lib.dir     = ${dist.dir}/lib
 
