Updated version info

--- a/default.properties
+++ b/default.properties
@@ -11,8 +11,8 @@ Name=JGoodies Looks
 shortname=looks
 name=jgoodies-looks
 spec.version=2.4
-impl.version=2.4-SNAPSHOT
-version.name=${impl.version}
+impl.version=2.4.0b1
+version.name=2.4 Beta1
 dist.version=2_4_0-SNAPSHOT-20100111
 spec.title=${Name} API Specification
 impl.title=${Name}
