--- a/default.properties
+++ b/default.properties
@@ -11,9 +11,9 @@ Name=JGoodies Looks
 shortname=looks
 name=jgoodies-looks
 spec.version=2.4
-impl.version=2.4.0b5
-version.name=2.4 Beta5
-dist.version=2_4_0-BETA5-20101020
+impl.version=2.4.0rc
+version.name=2.4 RC
+dist.version=2_4_0-RC-20101025
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
