Overhauled project structure

--- a/default.properties
+++ b/default.properties
@@ -11,9 +11,9 @@ Name=JGoodies Looks
 shortname=looks
 name=jgoodies-looks
 spec.version=2.5
-impl.version=2.5.0
-version.name=2.5
-dist.version=2_5_0-20120205
+impl.version=2.5.1
+version.name=${impl.version}
+dist.version=2_5_1-20120316
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -22,29 +22,25 @@ copyright.date=2001-2012
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
 
-jar.all.name    =jgoodies-looks
-jar.plastic.name=jgoodies-plastic
-jar.windows.name=jgoodies-looks-win
-
 top.dir=${basedir}
 
 # Source Properties -------------------------------------------
-src.dir         = ${top.dir}/src
-src.core.dir    = ${src.dir}/core
-src.test.dir    = ${src.dir}/test
-docs.dir        = ${top.dir}/docs
+src.dir           = ${top.dir}/src
+src.main.dir      = ${src.dir}/main/java
+src.test.dir      = ${src.dir}/test/java
+docs.dir          = ${top.dir}/docs
 
-descriptors.dir = ${src.main.dir}/service descriptors
+descriptors.dir   = ${src.dir}/main/service descriptors
 
 
 # Library Properties ------------------------------------------
-lib.common.jar  = ${lib.dir}/jgoodies-common-1.3.1.jar
+lib.common.jar    = ${lib.dir}/jgoodies-common-1.3.1.jar
 
 
 # JavaDoc Properties ------------------------------------------
 javadoc.link=http://download.oracle.com/javase/1.6.0/docs/api/
 javadoc.packages=com.jgoodies.*
-javadoc.overview=${src.core.dir}/overview.html
+javadoc.overview=${src.main.dir}/overview.html
 
 
 # Build Properties --------------------------------------------
@@ -59,39 +55,27 @@ build.encoding=ISO-8859-1
 
 build.dir          = ${top.dir}/build
 build.classes.dir  = ${build.dir}/classes
-build.core.dir     = ${build.classes.dir}/core
+build.main.dir     = ${build.classes.dir}/main
 build.test.dir     = ${build.classes.dir}/test
 build.manifest     = ${build.dir}/manifest.mf
 build.docs.dir     = ${build.dir}/docs
 build.javadocs.dir = ${build.docs.dir}/api
 build.reports.dir  = ${build.dir}/test-reports
 
-build.all.jar      = ${build.dir}/${jar.all.name}.jar
-build.plastic.jar  = ${build.dir}/${jar.plastic.name}.jar
-build.windows.jar  = ${build.dir}/${jar.windows.name}.jar
-
-build.maven.dir    = ${build.dir}/maven
-build.maven.pom.template = ${top.dir}/conf/maven-pom-template.xml
+build.main.jar     = ${build.dir}/${name}.jar
 
 
 # Dist Properties -----------------------------------------------
-dist.root.dir    = ${top.dir}/dist
-dist.name        = ${name}-${impl.version}
-deploy.name      = ${name}-${dist.version}
-dist.subdir      = ${dist.name}
-dist.dir         = ${dist.root.dir}/${dist.subdir}
-dist.zip         = ${dist.root.dir}/${deploy.name}.zip
-dist.src.dir     = ${dist.dir}/src
-dist.docs.dir    = ${dist.dir}/docs
-dist.lib.dir     = ${dist.dir}/lib
+dist.root.dir      = ${top.dir}/dist
+dist.name          = ${name}-${impl.version}
+deploy.name        = ${name}-${dist.version}
+dist.subdir        = ${dist.name}
+dist.dir           = ${dist.root.dir}/${dist.subdir}
+dist.docs.dir      = ${dist.dir}/docs
+dist.javadocs.jar  = ${dist.dir}/${dist.name}-javadocs.jar
+dist.sources.jar   = ${dist.dir}/${dist.name}-sources.jar
+dist.tests.jar     = ${dist.dir}/${dist.name}-tests.jar
+dist.main.jar      = ${dist.dir}/${dist.name}.jar
 
-dist.all.name    = ${jar.all.name}-${impl.version}.jar
-dist.all.jar     = ${dist.dir}/${dist.all.name}
-dist.all.src.zip = ${dist.dir}/${jar.all.name}-${impl.version}-src.zip
-dist.plastic.jar = ${dist.dir}/${jar.plastic.name}-${impl.version}.jar
-dist.windows.jar = ${dist.dir}/${jar.windows.name}-${impl.version}.jar
-
-dist.maven.pom     = ${build.maven.dir}/pom.xml
-dist.maven.bin.jar = ${build.maven.dir}/${dist.name}.jar
-dist.maven.src.jar = ${build.maven.dir}/${dist.name}-sources.jar
+dist.zip           = ${dist.root.dir}/${deploy.name}.zip
 dist.maven.bundle  = ${dist.root.dir}/${dist.name}-bundle.jar
