--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
    with one of the following targets:
    
      clean               removes temporary files and directories
-     compile             compiles the framework, extras, tutorial and tests
+     compile             compiles the main and test sources
      javadoc             creates the API documentation
      test                compiles and runs the unit tests
      jar                 creates a library jar
@@ -28,7 +28,7 @@
 
 -->
 
-<project default="create-all" basedir="." name="JGoodies Looks" >
+<project default="deploy" basedir="." name="JGoodies Looks" >
 
     <!-- ***************************************************************** -->
     <!-- Give users a chance to override build properties.                 -->
@@ -42,13 +42,13 @@
     <!-- ***************************************************************** -->
     <!-- P A T H S                                                         -->
     <!-- ***************************************************************** -->
-    <path id="classpath.core">
-        <pathelement location="${build.core.dir}" 	/> 
+    <path id="classpath.main">
+        <pathelement location="${build.main.dir}" 	/> 
         <pathelement location="${lib.common.jar}" 	/> 
     </path>
     
     <path id="classpath.tests">
-        <pathelement location="${build.core.dir}"   /> 
+        <pathelement location="${build.main.dir}"   /> 
         <pathelement location="${build.test.dir}"   /> 
         <pathelement location="${lib.common.jar}" 	/> 
         <pathelement location="${junit4.jar}"       /> 
@@ -80,7 +80,7 @@
            <format property="DATE" pattern="yyyy-MM-dd hh:mm:ss" />
         </tstamp>
         
-		<mkdir dir="${build.core.dir}"	  />
+		<mkdir dir="${build.main.dir}"	  />
 
         <available
             property="junit.task.present"
@@ -97,15 +97,15 @@
     <!-- C O M P I L A T I O N                                             -->
     <!-- ***************************************************************** -->
 	<target name="compile" 
-			depends="compile-core, compile-tests" 
+			depends="compile-main, compile-tests" 
 	        description="Compiles the l&amp;fs, and tests." />
 	        
     <!-- ***************************************************************** -->
-	<target name="compile-core" depends="prepare"
+	<target name="compile-main" depends="prepare"
 	        description="Compiles all library sources." >
 		<javac 
-			srcdir       ="${src.core.dir}"
-			destdir      ="${build.core.dir}"
+			srcdir       ="${src.main.dir}"
+			destdir      ="${build.main.dir}"
         	encoding     ="${build.encoding}"
         	executable   ="${build.compile.executable}"
         	fork         ="${build.compile.fork}"
@@ -118,11 +118,11 @@
 			target       ="${build.compile.target}"
 			verbose      ="${build.compile.verbose}"
 			bootclasspath="${build.boot.classpath}" 
-		    classpathref ="classpath.core" 
+		    classpathref ="classpath.main" 
 			includeAntRuntime="false" />
 
-		<copy toDir="${build.core.dir}" >
-			<fileset dir="${src.core.dir}" 
+		<copy toDir="${build.main.dir}" >
+			<fileset dir="${src.main.dir}" 
 					 includes="com/jgoodies/looks/common/shadow.png,
 					           com/jgoodies/looks/plastic/icons/**/*,
 					           com/jgoodies/looks/windows/icons/**/*" />
@@ -131,7 +131,7 @@
 	
 
 	<!-- ***************************************************************** -->
-    <target name="compile-tests" depends="compile-core" if="junit.jar.present"
+    <target name="compile-tests" depends="compile-main" if="junit.jar.present"
             description="Compiles the unit tests." >
         <mkdir dir="${build.test.dir}"/>
         <javac 
@@ -162,7 +162,7 @@
             description="Creates the API documentation using JavaDoc." >
 		<mkdir dir="${build.javadocs.dir}"	/>
         <javadoc 
-        	sourcepath="${src.core.dir}"
+        	sourcepath="${src.main.dir}"
             packagenames="${javadoc.packages}"
         	destdir="${build.javadocs.dir}"
         	encoding="${build.encoding}"
@@ -199,73 +199,31 @@
     <!-- ***************************************************************** -->
     <!-- J A R                                       				       -->
     <!-- ***************************************************************** -->
-	<target name="jar" 
-			depends="jar-all, jar-plastic, jar-windows"
-	        description="Creates library and example jars." >
-	</target>
-	
-    <!-- ***************************************************************** -->
-	<target name="manifest" depends="prepare"
-	        description="Creates the manifest file." >
-        <manifest file="${build.manifest}">
-            <attribute name ="Built-By" 
-                       value="${user.name}"/>
-            <attribute name ="Specification-Title"
-                       value="${spec.title}" />
-            <attribute name ="Specification-Vendor"
-                       value="${spec.vendor}" />
-            <attribute name ="Specification-Version"
-                       value="${spec.version}" />
-     		<attribute name ="Implementation-Title"
-                       value="${impl.title}" />
-            <attribute name ="Implementation-Vendor"
-                       value="${impl.vendor}" />
-     		<attribute name ="Implementation-Version"
-                       value="${impl.version} ${DATE}" />
-       </manifest>
-	</target>
-	
-    <!-- ***************************************************************** -->
-	<target name="jar-all" depends="compile, manifest"
-	        description="Creates the library jar with all JGoodies l&amp;fs." >
-
-		<jar 
-			destfile="${build.all.jar}" 
-			manifest="${build.manifest}" >
-			<fileset dir="${build.core.dir}" />
-			<zipfileset dir="${descriptors.dir}"
-					    includes="all.txt"
-			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
-		</jar>
-	</target>
-	
-    <!-- ***************************************************************** -->
-	<target name="jar-plastic" depends="compile, manifest"
-	        description="Creates the library jar for the Plastic l&amp;fs." >
-
-		<jar 
-			destfile="${build.plastic.jar}" 
-			manifest="${build.manifest}" >
-			<fileset dir="${build.core.dir}" 
-			         excludes="com/jgoodies/looks/windows/**/*"  />
-			<zipfileset dir="${descriptors.dir}"
-					    includes="plastic.txt"
-			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
-		</jar>
-	</target>
-	
-    <!-- ***************************************************************** -->
-	<target name="jar-windows" depends="compile, manifest"
-	        description="Creates the library jar for the windows l&amp;f." >
-		<jar 
-			destfile="${build.windows.jar}" 
-			manifest="${build.manifest}" >
-			<fileset dir="${build.core.dir}" 
-			         excludes="com/jgoodies/looks/plastic/**/*"  />
-			<zipfileset dir="${descriptors.dir}"
-					    includes="windows.txt"
-			            fullpath="META-INF/services/javax.swing.LookAndFeel" />
-		</jar>
+    <target name="jar" depends="compile-main"
+            description="Creates the library jar." >
+        <jar 
+            destfile="${build.main.jar}" >
+            <fileset dir="${build.main.dir}" />
+            <zipfileset dir="${descriptors.dir}"
+                        includes="all.txt"
+                        fullpath="META-INF/services/javax.swing.LookAndFeel" />
+            <manifest>
+                <attribute name ="Built-By" 
+                           value="${user.name}"/>
+                <attribute name ="Specification-Title"
+                           value="${spec.title}" />
+                <attribute name ="Specification-Vendor"
+                           value="${spec.vendor}" />
+                <attribute name ="Specification-Version"
+                           value="${spec.version}" />
+                <attribute name ="Implementation-Title"
+                           value="${impl.title}" />
+                <attribute name ="Implementation-Vendor"
+                           value="${impl.vendor}" />
+                <attribute name ="Implementation-Version"
+                           value="${impl.version} ${DATE}" />
+           </manifest>
+        </jar>
 	</target>
 	
     <!-- ***************************************************************** -->
@@ -287,18 +245,27 @@
 		</copy>
         <move todir="${dist.docs.dir}" file="${build.javadocs.dir}" />
 		
-		<!-- Copy the source directories. -->
-		<copy todir="${dist.src.dir}" >
-		    <fileset dir="${src.dir}" />
-		</copy>
-		
-		<!-- Copy the required libraries. -->
-		<copy todir="${dist.lib.dir}" file="${lib.common.jar}" />
+        <!-- Compress the JavaDocs. -->
+        <jar 
+            destfile="${dist.javadocs.jar}"
+            basedir="${dist.docs.dir}"
+        />
+        <!-- Compress the main and test sources. -->
+        <jar 
+            destfile="${dist.sources.jar}" 
+            basedir="${src.main.dir}"
+        />
+        <jar 
+            destfile="${dist.tests.jar}" 
+            basedir="${src.test.dir}"
+        />
+        <!-- Copy the library jar file. -->
+        <copy tofile="${dist.main.jar}" file="${build.main.jar}" />
 
 		<!-- Copy the distribution files. -->
 		<copy todir="${dist.dir}" >
 			<fileset dir="${top.dir}" 
-				     includes="*.txt, *.html, *.xml, *.properties" 
+				     includes="pom.xml, *.txt, *.html" 
 				     excludes="todo.txt" />
 			<filterset>
 				<filter token="impl.version"      value="${impl.version}"      />
@@ -308,47 +275,40 @@
 			</filterset>
 		</copy>
 
-		<!-- Copy the jar files. -->
-		<copy tofile="${dist.all.jar}"     file="${build.all.jar}" />
-		<!--
-		<copy tofile="${dist.plastic.jar}" file="${build.plastic.jar}" />
-		<copy tofile="${dist.windows.jar}" file="${build.windows.jar}" />
-		// -->
-		
 	</target>
 
     <!-- ***************************************************************** -->
-	<target name="create-dist-zip" depends="create-dist-dir"
-	        description="Packages the distribution as a zip file." >
-	        
+    <target name="create-dist-zip" depends="create-dist-dir"
+            description="Packages the distribution as a zip file." >
+            
         <zip 
-        	destfile="${dist.zip}" 
-        	basedir="${dist.root.dir}"
-        	includes="${dist.subdir}/**/*" />
-	</target>
-	
+            destfile="${dist.zip}" 
+            basedir="${dist.root.dir}"
+            includes="${dist.subdir}/**/*" />
+    </target>
+    
     <!-- ***************************************************************** -->
     <target name="create-maven-bundle" depends="create-dist-dir"
             description="Creates a Maven bundle for the Ibiblio upload." >
             
-        <!-- Copy the Maven pom template. -->
-        <copy 
-        	tofile="${dist.maven.pom}" 
-        	file="${build.maven.pom.template}" >
-			<filterset>
-				<filter token="impl.version"      value="${impl.version}"      />
-				<filter token="shortname"         value="${shortname}"      />
-			</filterset>
-    	</copy>
-        
-        <copy tofile="${dist.maven.bin.jar}" file="${build.all.jar}" />
-        <jar 
-            destfile="${dist.maven.src.jar}"
-            basedir="${dist.src.dir}" />   
         <jar 
             destfile="${dist.maven.bundle}" 
-            basedir="${build.maven.dir}" />
+            basedir="${dist.dir}" 
+            excludes="docs, docs/**/*"
+        />
     </target>
     
-        
+    <!-- ***************************************************************** -->
+    <target name="publish-locally" depends="create-dist-dir"
+            description="Copies the binary library to the local library repository." >
+            
+        <copy todir="${lib.dir}" file="${dist.main.jar}" />
+    </target>
+    
+    <!-- ***************************************************************** -->
+    <target name="deploy" depends="create-all, publish-locally"
+            description="Creates all distribution files and publishes locally." >
+            
+    </target>
+
 </project>
