--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,21 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jgoodies</groupId>
-	<artifactId>jgoodies-@shortname@</artifactId>
+	<artifactId>jgoodies-looks</artifactId>
 	<version>@impl.version</version>
 	<packaging>jar</packaging>
 	<name>JGoodies Looks</name>
-	<url>https://@shortname@.dev.java.net/</url>
+	<url>https://looks.java.net/</url>
 	<description>The JGoodies Looks make your Swing applications and 
 	    applets look better. They have been optimized for readability, 
 	    precise micro-design and usability. And they simplify 
 	    the multi-platform support by using similar widget dimensions. 
 	    In addition, many people have reviewed them as elegant.</description>
-	<licenses>
-		<license>
-			<name>The BSD License</name>
-			<url>http://www.opensource.org/licenses/bsd-license.html</url>
-		</license>
-	</licenses>
 	<dependencies>
 	    <dependency>
 	        <groupId>com.jgoodies</groupId>
 	        <artifactId>jgoodies-common</artifactId>
-	        <version>0.9.9</version>
+	        <version>@common.version@</version>
 	        <scope>runtime</scope>
 	    </dependency>
 	    <dependency>
@@ -31,37 +25,43 @@
 	    	<scope>test</scope>
 	    </dependency>
 	</dependencies>
-	<issueManagement>
-		<system>Bugzilla</system>
-		<url>https://@shortname@.dev.java.net/servlets/ProjectIssues</url>
-	</issueManagement>
-	<mailingLists>
-		<mailingList>
-			<name>User List</name>
-			<archive>https://@shortname@.dev.java.net/servlets/SummarizeList?listName=users</archive>
-			<post>users@@shortname@.dev.java.net</post>
-		</mailingList>
-	</mailingLists>
-	<scm>
-		<connection>scm:cvs:pserver:guest@cvs.dev.java.net:/cvs:@shortname@</connection>
-		<tag>head</tag>
-		<url>https://@shortname@.dev.java.net/source/browse/@shortname@/</url>
-	</scm>
-	<organization>
-		<name>JGoodies</name>
-		<url>http://www.jgoodies.com/</url>
-	</organization>
-	<developers>
-		<developer>
-			<id>karsten</id>
-			<name>Karsten Lentzsch</name>
-			<organization>JGoodies</organization>
-			<organizationUrl>http://www.jgoodies.com/</organizationUrl>
-			<timezone>+0100</timezone>
-			<roles>
-			    <role>Project owner</role>
-			    <role>Developer</role>
-			</roles>
-		</developer>
-	</developers>
+    <licenses>
+        <license>
+            <name>The BSD License</name>
+            <url>http://www.opensource.org/licenses/bsd-license.html</url>
+        </license>
+    </licenses>
+    <organization>
+        <name>JGoodies</name>
+        <url>http://www.jgoodies.com/</url>
+    </organization>
+    <developers>
+        <developer>
+            <id>karsten</id>
+            <name>Karsten Lentzsch</name>
+            <organization>JGoodies</organization>
+            <organizationUrl>http://www.jgoodies.com/</organizationUrl>
+            <timezone>+0100</timezone>
+            <roles>
+                <role>Project owner</role>
+                <role>Developer</role>
+            </roles>
+        </developer>
+    </developers>
+    <issueManagement>
+        <system>JIRA</system>
+        <url>http://java.net/jira/browse/LOOKS/</url>
+    </issueManagement>
+    <mailingLists>
+        <mailingList>
+            <name>User List</name>
+            <archive>http://http://java.net/projects/looks/lists/users/archive</archive>
+            <post>users@looks.java.net</post>
+        </mailingList>
+    </mailingLists>
+    <scm>
+        <connection>scm:svn:https://svn.java.net/svn/looks~svn</connection>
+        <tag>head</tag>
+        <url>https://svn.java.net/svn/looks~svn</url>
+    </scm>
 </project>
