--- a/default.properties
+++ b/default.properties
@@ -13,7 +13,7 @@ name=jgoodies-looks
 spec.version=2.5
 impl.version=2.5.1
 version.name=${impl.version}
-dist.version=2_5_1-20120316
+dist.version=2_5_1-20120409
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -34,7 +34,7 @@ descriptors.dir   = ${src.dir}/main/service descriptors
 
 
 # Library Properties ------------------------------------------
-lib.common.jar    = ${lib.dir}/jgoodies-common-1.3.1.jar
+lib.common.jar    = ${lib.dir}/jgoodies-common-${common.version}.jar
 
 
 # JavaDoc Properties ------------------------------------------
