Extracted version info

--- a/default.properties
+++ b/default.properties
@@ -11,9 +11,9 @@ Name=JGoodies Looks
 shortname=looks
 name=jgoodies-looks
 spec.version=2.5
-impl.version=2.5.1
+impl.version=${looks.version}
 version.name=${impl.version}
-dist.version=2_5_1-20120409
+dist.version=${looks.dist.version}
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
