--- a/default.properties
+++ b/default.properties
@@ -38,7 +38,7 @@ lib.common.jar    = ${lib.dir}/jgoodies-common-${common.version}.jar
 
 
 # JavaDoc Properties ------------------------------------------
-javadoc.link=http://docs.oracle.com/javase/6/docs/api/
+javadoc.link=${javadoc6.link}
 javadoc.packages=com.jgoodies.*
 javadoc.overview=${src.main.dir}/overview.html
 
